Fix more contrast issues.

--- a/packages/app/ui/styles/components/search/_results.scss
+++ b/packages/app/ui/styles/components/search/_results.scss
@@ -21,7 +21,7 @@
     padding: 0.382rem 0.618rem;
     font-size: 1rem;
     cursor: pointer;
-    color: var(--color-gray-600);
+    color: var(--color-gray-800);
     transition: all 0.2s ease-in-out;
 
     &.active,
